# arxml-scope

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
